@@ -83,11 +83,11 @@ void I_ShutdownMusic(void);
 void I_SetMusicVolume(int volume);
 
 // PAUSE game handling.
-void I_PauseSong(int handle);
-void I_ResumeSong(int handle);
+void I_PauseSong(void);
+void I_ResumeSong(void);
 
 // Registers a song handle to song data.
-int I_RegisterSong(const void *data, size_t len);
+void I_RegisterSong(const void *data, size_t len);
 
 // cournia - tries to load a music file
 int I_RegisterMusic( const char* filename, musicinfo_t *music );
@@ -96,13 +96,13 @@ int I_RegisterMusic( const char* filename, musicinfo_t *music );
 //  plays a song, and when the song is done,
 //  starts playing it again in an endless loop.
 // Horrible thing to do, considering.
-void I_PlaySong(int handle, int looping);
+void I_PlaySong(int looping);
 
 // Stops a song over 3 seconds.
-void I_StopSong(int handle);
+void I_StopSong(void);
 
 // See above (register), then think backwards
-void I_UnRegisterSong(int handle);
+void I_UnRegisterSong(void);
 
 // Allegro card support jff 1/18/98
 extern int snd_card;
